WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271937
[UnifiedPDF] Zoom out doesn't go out far enough with keyboard zoom
https://bugs.webkit.org/show_bug.cgi?id=271937
Summary
[UnifiedPDF] Zoom out doesn't go out far enough with keyboard zoom
Simon Fraser (smfr)
Reported
2024-03-30 10:17:21 PDT
Command-+ and Command-- zooming in a main frame PDF don't go out far enough.
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2024-03-30 10:17:32 PDT
<
rdar://125386166
>
Simon Fraser (smfr)
Comment 2
2024-03-30 10:24:08 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26648
EWS
Comment 3
2024-04-01 11:59:18 PDT
Committed
276890@main
(ed9218bd94b9): <
https://commits.webkit.org/276890@main
> Reviewed commits have been landed. Closing PR #26648 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug